날씨, 미세먼지 데이터 명목변수화

--- a/LH_Dinner.ipynb
+++ b/LH_Dinner.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1WJxt7Gh85Dztj0CiP8-zneepeNP_dL5o",
-      "authorship_tag": "ABX9TyPJhQz4DlmYLUFH5ae3Tafn",
+      "authorship_tag": "ABX9TyPKoSsdEz94bD3WEAg1m10E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,10 +126,19 @@
         "id": "BRJgdkRbceu5"
       },
       "source": [
-        "df = df.drop(columns=['조식', '중식', '중식계'])"
+        "df = df.drop(columns=['조식', '중식', '석식','중식계'])"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AMROvQAAYklg"
+      },
+      "source": [
+        "### 외부 데이터 추가"
+      ]
     },
     {
       "cell_type": "code",
@@ -347,19 +356,25 @@
       },
       "source": [
         "df = pd.merge(df, dust_df, on='일자')\n",
-        "df = pd.merge(df, w_df, on='일자')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GLfH0o5YdT93"
-      },
-      "source": [
+        "df = pd.merge(df, w_df, on='일자')\n",
+        "\n",
+        "# 결측치 근처 관측치로 대체\n",
         "df['fine_dust'][564, 1129] = [36, 23]\n",
-        "df['ultra_fine_dust'][234, 235, 564, 654, 1129] = [11, 31, 26, 5, 9]"
+        "df['ultra_fine_dust'][234, 235, 564, 654, 1129] = [11, 31, 26, 5, 9]\n",
+        "\n",
+        "# 저녁 컬럼 삭제\n",
+        "df = df.drop(columns=['rain_lunch', 'temp_lunch', 'hum_lunch', 'rain_type_lunch', 'discomfort_index_lunch'])\n",
+        "\n",
+        "# 미세먼지 명목변수화\n",
+        "df['fine_degree'] = df['fine_dust'].apply(lambda x : 0 if 0<=x<=30 else (1 if 31<=x<=80 else (2 if 81<=x<=150 else 3)))\n",
+        "df['ultra_fine_degree'] = df['ultra_fine_dust'].apply(lambda x : 0 if 0<=x<=15 else (1 if 16<=x<=35 else (2 if 36<=x<=75 else 3)))\n",
+        "df['fine_degree'] = df.apply(lambda x : max(x['fine_degree'], x['ultra_fine_degree']), axis=1)\n",
+        "\n",
+        "# 강수량 명목변수화\n",
+        "df['rain_degree'] = df['rain_dinner'].apply(lambda x : 0 if x < 2 else 1)\n",
+        "\n",
+        "# 불쾌지수 명목변수화 \n",
+        "df['discomfort_degree'] = df['discomfort_index_dinner'].apply(lambda x : 0 if x<68 else (1 if 68<=x<75 else (2 if 75<=x<80 else 3)))"
       ],
       "execution_count": null,
       "outputs": []
@@ -367,13 +382,78 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SJUIy-HvdUjS"
+        "id": "XCNKemNnYKl4"
       },
       "source": [
-        "df = df.drop(columns=['rain_lunch', 'temp_lunch', 'hum_lunch', 'rain_type_lunch', 'discomfort_index_lunch'])"
+        "# 코로나 데이터 추가\n",
+        "corona = corona.drop_duplicates(['일자'])\n",
+        "check_corona = corona[['일자', '누적검사자']]\n",
+        "\n",
+        "df = pd.merge(df,corona[['일자', '일일검사자']], on='일자', how='left')\n",
+        "df = df.fillna(0)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "az0VsYXAYplO"
+      },
+      "source": [
+        "# 공휴일 데이터 추가\n",
+        "holiday['date'] = pd.to_datetime(holiday['date'])\n",
+        "df['일자'] = pd.to_datetime(df['일자'])\n",
+        "df['before_holiday'] = df['일자'].apply(lambda x : 1 if (x+dt.timedelta(1) in holiday['date'].tolist()) else 0)\n",
+        "df['after_holiday'] = df['일자'].apply(lambda x : 1 if (x-dt.timedelta(1) in holiday['date'].tolist()) else 0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2EwDjNHrYrey"
+      },
+      "source": [
+        "# # 이벤트 데이터 고민 - 복날 / 연말\n",
+        "# event = pd.to_datetime(['2017-07-12', '2018-07-17', '2019-07-12', '2020-07-16'])\n",
+        "# df['이벤트'] = df['일자'].apply(lambda x : 1 if x in event else 0)\n",
+        "\n",
+        "# end_year = df[(df['월']==12)&(df['일']>=21)].index\n",
+        "# df['연말'] = df.apply(lambda x : 1 if  x.name in end_year else 0, axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0ozp-y6UYsa6"
+      },
+      "source": [
+        "## 중간 변수 색출"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V92eqBdKYtvB"
+      },
+      "source": [
+        "df = df[['일자', '요일', '정원', '휴가자', '출장자', '야근자','재택근무자', '석식계', 'fine_degree', 'rain_degree', 'discomfort_degree', '일일검사자', 'before_holiday', 'after_holiday']]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nD7nmPL2Y5g8"
+      },
+      "source": [
+        "### 파생변수"
+      ]
     },
     {
       "cell_type": "code",
@@ -385,19 +465,6 @@
         "df['년'] = df['일자'].dt.year\n",
         "df['월'] = df['일자'].dt.month\n",
         "df['일'] = df['일자'].dt.day"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "un0WtogrdYUF"
-      },
-      "source": [
-        "holiday['date'] = pd.to_datetime(holiday['date'])\n",
-        "df['before_holiday'] = df['일자'].apply(lambda x : 1 if (x+dt.timedelta(1) in holiday['date'].tolist()) else 0)\n",
-        "df['after_holiday'] = df['일자'].apply(lambda x : 1 if (x-dt.timedelta(1) in holiday['date'].tolist()) else 0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -444,79 +511,18 @@
         "train['주차'][list(train[train['주차']==-46].index)] = np.array([6, 6, 6])\n",
         "\n",
         "df = pd.concat([train, test])\n",
-        "df['출장자제외'] = df['정원'] - df['출장자']\n",
-        "df['재택근무제외'] = df['정원'] - df['재택근무자']\n",
-        "df['연기준몇일째']= df['일자'].dt.dayofyear\n",
-        "df['연기준몇주째']= df['일자'].dt.weekofyear\n",
-        "df['월일수']= df['일자'].dt.days_in_month\n",
-        "df['윤년여부'] = df['일자'].dt.is_leap_year\n",
-        "df['월시작일여부'] = df['일자'].dt.is_month_start\n",
-        "df['월마지막일여부'] =df['일자'].dt.is_month_end\n",
-        "df['분기시작일여부'] =df['일자'].dt.is_quarter_start\n",
-        "df['분기마지막일여부'] =df['일자'].dt.is_quarter_end\n",
-        "df['연시작일여부'] =df['일자'].dt.is_year_start\n",
-        "df['연마지막일여부'] =df['일자'].dt.is_year_end"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9E5tiQmLdoYS"
-      },
-      "source": [
-        "end_year = df[(df['월']==12)&(df['일']>=21)].index\n",
-        "df['연말'] = df.apply(lambda x : 1 if  x.name in end_year else 0, axis=1)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NL95aYWqdpK9"
-      },
-      "source": [
-        "corona['일자'] = pd.to_datetime(corona['일자'])\n",
-        "corona = corona.drop_duplicates(['일자'])\n",
-        "check_corona = corona[['일자', '누적검사자']]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XQTq88Ebdp2S"
-      },
-      "source": [
-        "df = pd.merge(df,corona[['일자', '일일검사자']], on='일자', how='left')\n",
-        "df = df.fillna(0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "O-DcfLUtdqvz"
-      },
-      "source": [
-        "# 이벤트\n",
-        "event = pd.to_datetime(['2017-07-12', '2018-07-17', '2019-07-12', '2020-07-16'])\n",
-        "df['이벤트'] = df['일자'].apply(lambda x : 1 if x in event else 0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eLrnQwggdrXO"
-      },
-      "source": [
-        "df = df.drop(columns=['석식'])"
+        "# df['출장자제외'] = df['정원'] - df['출장자']\n",
+        "# df['재택근무제외'] = df['정원'] - df['재택근무자']\n",
+        "# df['연기준몇일째']= df['일자'].dt.dayofyear\n",
+        "# df['연기준몇주째']= df['일자'].dt.weekofyear\n",
+        "# df['월일수']= df['일자'].dt.days_in_month\n",
+        "# df['윤년여부'] = df['일자'].dt.is_leap_year\n",
+        "# df['월시작일여부'] = df['일자'].dt.is_month_start\n",
+        "# df['월마지막일여부'] =df['일자'].dt.is_month_end\n",
+        "# df['분기시작일여부'] =df['일자'].dt.is_quarter_start\n",
+        "# df['분기마지막일여부'] =df['일자'].dt.is_quarter_end\n",
+        "# df['연시작일여부'] =df['일자'].dt.is_year_start\n",
+        "# df['연마지막일여부'] =df['일자'].dt.is_year_end"
       ],
       "execution_count": null,
       "outputs": []
@@ -540,23 +546,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nbcfgNT5jUNH"
-      },
-      "source": [
-        "df.columns"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "nqUewNEsjT1T"
       },
       "source": [
         "dc = df.copy()\n",
         "# dc.columns\n",
-        "dc = dc[['일자', '요일', '월', '년', '야근_가능', '휴가비율', '출장비율', '야근비율', '석식계']]"
+        "dc = dc[['일자', '요일', '월', '년', '야근_가능', '출근인원', '야근비율', '석식계',\n",
+        "         'before_holiday']]"
       ],
       "execution_count": null,
       "outputs": []
@@ -567,11 +563,20 @@
         "id": "PM-QyA2kdycg"
       },
       "source": [
-        "train = df.iloc[:train.shape[0], :]\n",
-        "test = df.iloc[train.shape[0]:, :]"
+        "train = dc.iloc[:train.shape[0], :]\n",
+        "test = dc.iloc[train.shape[0]:, :]"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RjaU-XCpZfOR"
+      },
+      "source": [
+        "* 결측치 처리"
+      ]
     },
     {
       "cell_type": "code",
@@ -681,17 +686,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mC1mPrVGeoGD"
-      },
-      "source": [
-        "submission"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "L9MRRO2SeeAJ"
       },
       "source": [
@@ -706,7 +700,7 @@
         "id": "NdMKjVJReeyG"
       },
       "source": [
-        "submission.to_csv(sub_path+'/20210614_02.csv', index=False)"
+        "submission.to_csv(sub_path+'/20210615_01.csv', index=False)"
       ],
       "execution_count": null,
       "outputs": []
@@ -714,7 +708,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EWYMYH-GejlR"
+        "id": "c5Kvr7h4bSi_"
       },
       "source": [
         ""
