우일님 컬럼 적용

--- a/LH_Lunch.ipynb
+++ b/LH_Lunch.ipynb
@@ -13,7 +13,7 @@
         "LE_WTj5OCvsW"
       ],
       "mount_file_id": "1l2NH5yafpIojJ-f0dM0WEDv-rwEiHKNw",
-      "authorship_tag": "ABX9TyNtKsTAew+9xztGVdTT+Bm9",
+      "authorship_tag": "ABX9TyMkafnZ8tNSy4QDWmuOlVvY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1346,7 +1346,7 @@
         "df['계절'] = df['월'].apply(lambda x : month_to_season[x])\n",
         "\n",
         "df['요일'] = df['일자'].dt.weekday\n",
-        "df['is_monday'] = df['요일'].apply(lambda x : 1 if (x=='월') else 0) \n",
+        "df['is_monday'] = df['요일'].apply(lambda x : 1 if (x==0) else 0) \n",
         "df['야근_가능'] = df['요일'].apply(lambda x : 1 if (x=='수') or (x=='금') else 0)\n",
         "df['정책_변화'] = df['일자'].apply(lambda x : 0 if x < pd.to_datetime('2019-01-04') else 1)\n",
         "\n",
@@ -1561,6 +1561,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "f7Y14JTTgb0K"
+      },
+      "source": [
+        "gukgam = pd.to_datetime(['2016-10-04', '2016-10-05', '2016-10-06', '2016-10-07', '2017-10-10', '2017-10-11', '2017-10-12', '2017-10-13', '2018-10-08', '2018-10-10', '2018-10-11',\\\n",
+        "          '2018-10-12', '2019-10-02', '2019-10-04', '2020-10-05', '2020-10-06', '2020-10-07', '2020-10-08'])\n",
+        "# gukgam = ['2019-10-04', '2019-10-02', '2018-10-10']\n",
+        "df_tmp['국정감사'] = df_tmp['일자'].apply(lambda x : 1 if x in gukgam else 0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "MOtRSrMpGVer"
       },
       "source": [
@@ -1642,117 +1656,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zprqoEreDscs"
-      },
-      "source": [
-        "list_1 = ['휴가자',\n",
-        " '출장자',\n",
-        " '야근자',\n",
-        " '재택근무자',\n",
-        " '중식메뉴_육류',\n",
-        " '중식메뉴_난류',\n",
-        " '중식메뉴_죽류',\n",
-        " '중식메뉴_덮밥_국밥류',\n",
-        " '중식메뉴_비빔밥_볶음밥류',\n",
-        " '중식메뉴_국탕류',\n",
-        " '중식메뉴_구이류',\n",
-        " '중식메뉴_전류',\n",
-        " '중식메뉴_튀김류',\n",
-        " '중식메뉴_곡물',\n",
-        " '중식메뉴_콩류',\n",
-        " '중식메뉴_묵',\n",
-        " '중식메뉴_생선_조개류',\n",
-        " '중식메뉴_채소류',\n",
-        " '중식메뉴_해조류',\n",
-        " '중식메뉴_장류',\n",
-        " '중식메뉴_김치',\n",
-        " '중식메뉴_만두',\n",
-        " '중식메뉴_곡물가루',\n",
-        " '중식메뉴_과일',\n",
-        " '중식메뉴_쌀',\n",
-        " '중식메뉴_김밥_초밥',\n",
-        " '중식메뉴_절임류',\n",
-        " '중식메뉴_면류',\n",
-        " '중식메뉴_스튜',\n",
-        " '중식메뉴_나물_무침류',\n",
-        " '중식메뉴_피클',\n",
-        " '중식메뉴_샐러드',\n",
-        " '중식메뉴_우유',\n",
-        " '중식메뉴_빵류',\n",
-        " '중식메뉴_음료',\n",
-        " '중식메뉴_돼지고기',\n",
-        " '중식메뉴_소고기',\n",
-        " '중식메뉴_닭고기',\n",
-        " '중식메뉴_오리고기',\n",
-        " '식사가능인원',\n",
-        " '일',\n",
-        " '야근_가능',\n",
-        " '연기준몇주째',\n",
-        " '월마지막일여부',\n",
-        " '주차',\n",
-        " 'is_corona',\n",
-        " 'fine_degree',\n",
-        " 'rain_degree_lunch',\n",
-        " 'discomfort_degree_lunch',\n",
-        " 'before_holiday',\n",
-        " 'after_holiday',\n",
-        " '명절_이전_영업일',\n",
-        " '년_2016',\n",
-        " '년_2017',\n",
-        " '년_2018',\n",
-        " '년_2019',\n",
-        " '년_2020',\n",
-        " '년_2021',\n",
-        " '월_1',\n",
-        " '월_2',\n",
-        " '월_3',\n",
-        " '월_4',\n",
-        " '월_5',\n",
-        " '월_6',\n",
-        " '월_7',\n",
-        " '월_8',\n",
-        " '월_9',\n",
-        " '월_10',\n",
-        " '월_11',\n",
-        " '월_12',\n",
-        " '요일_0',\n",
-        " '요일_1',\n",
-        " '요일_2',\n",
-        " '요일_3',\n",
-        " '요일_4',\n",
-        " '계절_0',\n",
-        " '계절_1',\n",
-        " '계절_2',\n",
-        " '계절_3']"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "798mJzVeKlui"
-      },
-      "source": [
-        " temp_list = [i for i in list_1 if '중식' not in i]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rzHrgNT4Q2vq"
-      },
-      "source": [
-        "list(train_1.columns)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "MVXKBBoIMTUN"
       },
       "source": [
@@ -1785,9 +1688,56 @@
         " 'discomfort_degree_lunch',\n",
         " '일',\n",
         " '식사가능인원',\n",
-        "#  '재택근무자',\n",
-        "#  '일일검사자',\n",
-        "#   '첫_출근일',\n",
+        " '재택근무자',\n",
+        " '출장자',\n",
+        " '휴가자',\n",
+        " 'after_holiday',\n",
+        " '연기준몇주째',\n",
+        " '월일수',\n",
+        " '국정감사',\n",
+        "#   '중식메뉴_육류', '중식메뉴_난류', '중식메뉴_덮밥_국밥류', '중식메뉴_비빔밥_볶음밥류', '중식메뉴_국탕류', '중식메뉴_구이류', '중식메뉴_전류',\n",
+        "#    '중식메뉴_튀김류', '중식메뉴_콩류', '중식메뉴_묵', '중식메뉴_생선_조개류', '중식메뉴_채소류', '중식메뉴_해조류', '중식메뉴_장류', '중식메뉴_만두', '중식메뉴_곡물가루', '중식메뉴_과일', \n",
+        "#   '중식메뉴_김밥_초밥', '중식메뉴_절임류', '중식메뉴_면류', '중식메뉴_스튜', '중식메뉴_샐러드', '중식메뉴_우유', '중식메뉴_빵류', '중식메뉴_돼지고기', '중식메뉴_소고기', '중식메뉴_닭고기', '중식메뉴_오리고기',\n",
+        "#  'is_monday',\n",
+        "#   '중식메뉴_육류',\n",
+        "#  '중식메뉴_난류',\n",
+        "#  '중식메뉴_죽류',\n",
+        "#  '중식메뉴_덮밥_국밥류',\n",
+        "#  '중식메뉴_비빔밥_볶음밥류',\n",
+        "#  '중식메뉴_국탕류',\n",
+        "#  '중식메뉴_구이류',\n",
+        "#  '중식메뉴_전류',\n",
+        "#  '중식메뉴_튀김류',\n",
+        "#  '중식메뉴_곡물',\n",
+        "#  '중식메뉴_콩류',\n",
+        "#  '중식메뉴_묵',\n",
+        "#  '중식메뉴_생선_조개류',\n",
+        "#  '중식메뉴_채소류',\n",
+        "#  '중식메뉴_해조류',\n",
+        "#  '중식메뉴_장류',\n",
+        "#  '중식메뉴_김치',\n",
+        "#  '중식메뉴_만두',\n",
+        "#  '중식메뉴_곡물가루',\n",
+        "#  '중식메뉴_과일',\n",
+        "#  '중식메뉴_쌀',\n",
+        "#  '중식메뉴_김밥_초밥',\n",
+        "#  '중식메뉴_절임류',\n",
+        "#  '중식메뉴_면류',\n",
+        "#  '중식메뉴_스튜',\n",
+        "#  '중식메뉴_나물_무침류',\n",
+        "#  '중식메뉴_피클',\n",
+        "#  '중식메뉴_샐러드',\n",
+        "#  '중식메뉴_우유',\n",
+        "#  '중식메뉴_빵류',\n",
+        "#  '중식메뉴_음료',\n",
+        "#  '중식메뉴_돼지고기',\n",
+        "#  '중식메뉴_소고기',\n",
+        "#  '중식메뉴_닭고기',\n",
+        "#  '중식메뉴_오리고기',\n",
+        "#  '주차'\n",
+        "#  '변화', '인원변화', '휴식기간', '명절_이전_영업일','복날',\n",
+        "#  'before_holiday', '주차', '정책_변화',\n",
+        "#  , '야근_가능' '일일검사자','첫_출근일',\n",
         "#  '마지막_출근일',\n",
         " ]"
       ],
@@ -1802,21 +1752,21 @@
       "source": [
         "* 의미가 큰 변수  \n",
         "    * 날씨, 일, \n",
-        "    * 일일검사자, 재택근무자 거의 비슷, 일일이 나음 둘 다 넣으면? -> 효과가 훨씬 좋네\n",
+        "    * 식사가능인원 / 재택근무자 / 출장자 / 휴가자\n",
+        "    * 휴일 다음날 \n",
         "* 의미가 없는 것\n",
-        "    * 계절, 첫_출근일, 마지막_출근일"
+        "    * 계절, 첫_출근일, 마지막_출근일\n",
+        "\n"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "xYgyOTRqV_ZT"
+        "id": "VmB191p8pYCH"
       },
       "source": [
-        "train_1"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "* 60.6889"
+      ]
     },
     {
       "cell_type": "code",
@@ -1827,7 +1777,7 @@
         "automl = AutoML()\n",
         "\n",
         "y_train = train_1['중식계']\n",
-        "X_train = train_1[temp_list]\n",
+        "X_train = train_1[['휴가자', '출장자', '야근자', '재택근무자', '중식메뉴_육류', '중식메뉴_난류', '중식메뉴_덮밥_국밥류', '중식메뉴_비빔밥_볶음밥류', '중식메뉴_국탕류', '중식메뉴_구이류', '중식메뉴_전류', '중식메뉴_튀김류', '중식메뉴_콩류', '중식메뉴_묵', '중식메뉴_생선_조개류', '중식메뉴_채소류', '중식메뉴_해조류', '중식메뉴_장류', '중식메뉴_만두', '중식메뉴_곡물가루', '중식메뉴_과일', '중식메뉴_김밥_초밥', '중식메뉴_절임류', '중식메뉴_면류', '중식메뉴_스튜', '중식메뉴_샐러드', '중식메뉴_우유', '중식메뉴_빵류', '중식메뉴_돼지고기', '중식메뉴_소고기', '중식메뉴_닭고기', '중식메뉴_오리고기', '식사가능인원', '일', '야근_가능', '연기준몇주째', '월마지막일여부', '주차', 'is_corona', 'fine_degree', 'rain_degree_lunch', 'discomfort_degree_lunch', 'before_holiday', 'after_holiday', '년_2016', '년_2017', '년_2018', '년_2019', '년_2020', '년_2021', '월_1', '월_2', '월_3', '월_4', '월_5', '월_6', '월_7', '월_8', '월_9', '월_10', '월_11', '월_12', '요일_0', '요일_1', '요일_2', '요일_3', '요일_4', '계절_0', '계절_1', '계절_2', '계절_3']]\n",
         "# Specify automl goal and constraint\n",
         "automl_settings = {\n",
         "    \"time_budget\": 120,  # in seconds\n",
@@ -1841,8 +1791,7 @@
         "# print(automl.predict(X_train))\n",
         "# Export the best model\n",
         "print(automl.model) # 62.8802\n",
-        "# 61.8124 - 이상치 제거\n",
-        "# 62.9797"
+        "# 61.8124 - 이상치 제거"
       ],
       "execution_count": null,
       "outputs": []
@@ -1871,6 +1820,75 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lpXPbkw8U0JN"
+      },
+      "source": [
+        "* 42.8"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KnWzBMKRQR4r"
+      },
+      "source": [
+        "temp_din = [ '년_2016',\n",
+        " '년_2017',\n",
+        " '년_2018',\n",
+        " '년_2019',\n",
+        " '년_2020',\n",
+        " '년_2021',\n",
+        " '월_1',\n",
+        " '월_2',\n",
+        " '월_3',\n",
+        " '월_4',\n",
+        " '월_5',\n",
+        " '월_6',\n",
+        " '월_7',\n",
+        " '월_8',\n",
+        " '월_9',\n",
+        " '월_10',\n",
+        " '월_11',\n",
+        " '월_12',\n",
+        " '요일_0',\n",
+        " '요일_1',\n",
+        " '요일_2',\n",
+        " '요일_3',\n",
+        " '요일_4',\n",
+        "  '일',\n",
+        " '식사가능인원',\n",
+        " '휴가자',\n",
+        " '야근자',\n",
+        " '출장자',\n",
+        " 'is_corona',\n",
+        " '명절_이전_영업일',\n",
+        " '휴식기간',\n",
+        "  '계절_0',\n",
+        " '계절_1',\n",
+        " '계절_2',\n",
+        " '계절_3',\n",
+        "#  '국정감사',\n",
+        "#  '월일수',\n",
+        "#  '변화',\n",
+        "#  'before_holiday',\n",
+        "# 'after_holiday',\n",
+        "#  '연기준몇주째',\n",
+        "#  '야근_가능',\n",
+        "#  '첫_출근일',\n",
+        "#  '마지막_출근일',\n",
+        "#  '재택근무자'\n",
+        "#    '일일검사자',\n",
+        "#    'fine_degree',\n",
+        "#  'rain_degree_dinner',\n",
+        "#  'discomfort_degree_dinner',\n",
+        "]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0zicAX8FQHz_"
@@ -1878,7 +1896,7 @@
       "source": [
         "automl = AutoML()\n",
         "y_train = train_2['석식계']\n",
-        "X_train = train_2.drop(columns=['석식계'])\n",
+        "X_train = train_2[['휴가자', '출장자', '야근자', '재택근무자', '석식메뉴_육류', '석식메뉴_난류', '석식메뉴_덮밥_국밥류', '석식메뉴_비빔밥_볶음밥류', '석식메뉴_국탕류', '석식메뉴_구이류', '석식메뉴_전류', '석식메뉴_튀김류', '석식메뉴_콩류', '석식메뉴_묵', '석식메뉴_생선_조개류', '석식메뉴_채소류', '석식메뉴_해조류', '석식메뉴_장류', '석식메뉴_만두', '석식메뉴_곡물가루', '석식메뉴_과일', '석식메뉴_김밥_초밥', '석식메뉴_절임류', '석식메뉴_면류', '석식메뉴_스튜', '석식메뉴_샐러드', '석식메뉴_우유', '석식메뉴_빵류', '석식메뉴_돼지고기', '석식메뉴_소고기', '석식메뉴_닭고기', '석식메뉴_오리고기', '식사가능인원', '일', '야근_가능', '연기준몇주째', '월마지막일여부', '주차', 'is_corona', 'fine_degree', 'rain_degree_dinner', 'discomfort_degree_dinner', 'before_holiday', 'after_holiday', '명절_이전_영업일', '년_2016', '년_2017', '년_2018', '년_2019', '년_2020', '년_2021', '월_1', '월_2', '월_3', '월_4', '월_5', '월_6', '월_7', '월_8', '월_9', '월_10', '월_11', '월_12', '요일_0', '요일_1', '요일_2', '요일_3', '요일_4', '계절_0', '계절_1', '계절_2', '계절_3']]\n",
         "# Specify automl goal and constraint\n",
         "automl_settings = {\n",
         "    \"time_budget\": 120,  # in seconds\n",
